--- a/Course2/Course2/Views/Produtos/Cadastrar.cshtml
+++ b/Course2/Course2/Views/Produtos/Cadastrar.cshtml
@@ -1,9 +1,10 @@
-﻿@model Course2.Models.Funcionario
+﻿@model Course2.Models.Produto
 
-<h2>Cadastro de Funcionarios</h2>
 
-<form class="form-horizontal" asp-controller="Funcionarios" asp-action="Salvar" method="POST">
-   
+<h2>Cadastro de Produtos</h2>
+
+<form class="form-horizontal" asp-controller="Produtos" asp-action="Salvar" method="POST">
+
     <div class="form-group">
         <label class="control-label col-sm-2" for="Id"></label>
         <div class="col-sm-10">
@@ -18,17 +19,11 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-sm-2" for="salario">Salario:</label>
+        <label class="control-label col-sm-2" for="Categoria"></label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" asp-for="Salario" placeholder="Entre com um salario">
+            <input type="hidden" asp-for="Categoria">
         </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2" for="cpf">CPF:</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" asp-for="Cpf" placeholder="Entre com um CPF">
-        </div>
-    </div>
+    </div>   
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-success">Cadastrar</button>
